@@ -8,6 +8,7 @@ import com.ford.syncV4.protocol.ProtocolMessage;
 import com.ford.syncV4.protocol.WiProProtocol;
 import com.ford.syncV4.protocol.enums.FunctionID;
 import com.ford.syncV4.proxy.SyncProxyALM;
+import com.ford.syncV4.proxy.constants.Names;
 import com.ford.syncV4.proxy.constants.ProtocolConstants;
 import com.ford.syncV4.proxy.interfaces.IProxyListenerALM;
 import com.ford.syncV4.syncConnection.SyncConnection;
@@ -28,12 +29,13 @@ import static org.mockito.Mockito.when;
  * Created by enikolsky on 2013-10-29.
  */
 public class TestCommon {
+
     public static JSONObject paramsToRequestObject(JSONObject paramsObject)
             throws JSONException {
         JSONObject jsonObject = new JSONObject();
         JSONObject requestObject = new JSONObject();
-        jsonObject.put("request", requestObject);
-        requestObject.put("parameters", paramsObject);
+        jsonObject.put(Names.request, requestObject);
+        requestObject.put(Names.parameters, paramsObject);
         return jsonObject;
     }
 
@@ -52,8 +54,8 @@ public class TestCommon {
         when(connectionMock.getWiProProtocol()).thenReturn(protocolMock);
 
         return new SyncProxyALM(proxyListener, null, "!", null, null, true,
-                null, null, null, null, null, null, false, false, 2, null,
-                connectionMock, new TestConfig());
+                null, null, null, null, null, null, false, false,
+                ProtocolConstants.PROTOCOL_VERSION_TWO, null, connectionMock, new TestConfig());
     }
 
     public static byte[] getRandomBytes(int dataSize) {
